--- a/public/messages.css
+++ b/public/messages.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column-reverse;
     gap: 1rem;
-    height: 420px;
+    height: calc(100vh - 350px);
+    min-height: 450px;
     overflow-y: scroll;
     padding: 0;
     margin: 0 0 1rem;
@@ -35,6 +36,16 @@
 
 .messages__message {
     flex: 0 1 auto;
+}
+
+.messages__message img,
+.messages__message video {
+    max-width: 80%;
+}
+
+.messages__message p + img,
+.messages__message p + video {
+    margin-top: 1rem;
 }
 
 .messages__message > p {
