Better ordering in message thread show

--- a/app/views/message_thread/_messages_from_thread.html.erb
+++ b/app/views/message_thread/_messages_from_thread.html.erb
@@ -1,4 +1,4 @@
-<% messages = message_thread.messages.all.reverse %>
+<% messages = message_thread.messages.order(updated_at: :desc).all %>
 
 <div class="messages">
   <% messages.each_with_index do |message, index| %>
