--- a/public/user-profile.css
+++ b/public/user-profile.css
@@ -149,6 +149,11 @@ form.orgasms .form__row {
     cursor: pointer;
 }
 
+.form__row input.full-width {
+    width: 100%;
+    margin-bottom: 0;
+}
+
 .form__row label {
     margin: 0;
 }
