--- a/app/views/message_thread/show.html.erb
+++ b/app/views/message_thread/show.html.erb
@@ -12,7 +12,11 @@
 
 <h2 class="one-line">
   <ion-icon name="chatbubbles"></ion-icon>
-  <%= @message_thread.users.all.map(&:username).map(&:capitalize).join ', ' %>
+  <% if @message_thread.name.nil? %>
+    <%= @message_thread.users.all.map(&:username).map(&:capitalize).join ', ' %>
+  <% else %>
+    <%= @message_thread.name %>
+  <% end %>
 </h2>
 
 <%= turbo_stream_from @message_thread %>
