--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -17,7 +17,12 @@
     <div class="link--presence">
       <% if link.last_ping || link.live_client_started_at %>
         <% if link.is_online? %>
-          <strong class="online">Online</strong>
+          <strong class="online">
+            Online
+            <% if link.live_client_started_at %>
+              <ion-icon name="pulse-sharp"></ion-icon>
+            <% end %>
+          </strong>
         <% else %>
           <strong class="offline"><abbr title=">1 minute since last ping">Offline</abbr></strong>
         <% end %>
