Added a link to the i forgor page

--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -22,4 +22,7 @@
     <%= label_tag :keep_me_logged_in %>
   </div>
   <%= submit_tag 'Log In' %>
+  <br/>
+  <br/>
+  <small><%= link_to 'I forgot my password, please save me ever benevolent walltaker god.', forgor_path %></small>
 <% end %>
