--- a/app/views/users/request_password_reset.html.erb
+++ b/app/views/users/request_password_reset.html.erb
@@ -1,3 +1,15 @@
+<h2>
+  <ion-icon name="skull"></ion-icon>
+  I Forgor
+</h2>
+
+<p>
+  This is an automated password reset system. I cheaped out HARD here, since email delivery is a surprisingly expensive
+  service to use when my budget is $3/month. You should receive an email, but some email providers block the service I'm
+  using to send this. Check you spam folder. If it never arrives, contact
+  <a href="https://walltaker.joi.how/users/gray">Gray</a>.
+</p>
+
 <%= form_with url: forgor_commit_url, method: :post do |f| %>
   <div class="field">
     <%= f.label :email %><br/>
