--- a/app/views/users/request_password_reset.html.erb
+++ b/app/views/users/request_password_reset.html.erb
@@ -6,7 +6,7 @@
 <p>
   This is an automated password reset system. I cheaped out HARD here, since email delivery is a surprisingly expensive
   service to use when my budget is $3/month. You should receive an email, but some email providers block the service I'm
-  using to send this. Check you spam folder. If it never arrives, contact
+  using to send this. Check your spam folder. If it never arrives, contact
   <a href="https://walltaker.joi.how/users/gray">Gray</a>.
 </p>
 
