--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -45,6 +45,13 @@
 .dashboard h2 {
     margin-top: 0rem;
     text-align: left;
+    font-size: 1.25rem;
+    padding: 0 0 0.5rem;
+}
+
+.dashboard h2 > small {
+    margin-top: 0.85em;
+    font-size: 0.5em;
 }
 
 .dashboard__recent {
