--- a/public/link.css
+++ b/public/link.css
@@ -16,6 +16,30 @@
     overflow: hidden;
 }
 
+/* browse page links list */
+@media screen and (min-width: 1220px) {
+    #links {
+        width: 100vw;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 0 1rem;
+        box-sizing: border-box;
+        gap: 1.5rem;
+        column-count: 2;
+    }
+
+    #links > *:first-child .link {
+        margin-top: 0;
+    }
+}
+
+@media screen and (min-width: 1620px) {
+    #links {
+        column-count: 3;
+    }
+}
+
 @media screen and (max-width: 512px) {
     .link {
         grid-template-columns: auto auto !important;
