I'm a fucking idiot, fixed columns

--- a/public/link.css
+++ b/public/link.css
@@ -30,11 +30,8 @@
     }
 
     #links > * {
-        white-space: nowrap;
-    }
-
-    #links > * blockquote {
-        white-space: normal;
+        page-break-inside: avoid;
+        break-inside: avoid-column;
     }
 
     #links > *:first-child .link {
