--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,16 @@
       </a>
     </div>
   <% end %>
+
+  <% if (current_user && @has_friendship) && !@is_current_user %>
+    <div class="right">
+      <a href="<%= resolve_message_thread_index_path(user_id: @user.id) %>" title="Become friends" class="no-underline">
+        <ion-icon role="presentation" name="mail"></ion-icon>
+        Send message
+      </a>
+    </div>
+  <% end %>
+
   <% if current_user && current_user.id == @user.id %>
     <div class="right">
       <%= button_to "New link", new_link_path, method: :get %>
