Added timestamp to goon thread messages

--- a/app/views/message_thread/_messages_from_thread.html.erb
+++ b/app/views/message_thread/_messages_from_thread.html.erb
@@ -31,7 +31,7 @@
 
         <% next_message = messages[index - 1] %> <!-- Remember, the list is reversed -->
         <% if (next_message && next_message.from_user.username != message.from_user.username) || index == 0 %>
-          <strong><%= message.from_user.username %></strong>
+          <strong><%= message.from_user.username %> - <%= time_ago_in_words message.created_at %> ago</strong>
         <% end %>
       </div>
     </div>
