--- a/app/views/porn_search/index.html.erb
+++ b/app/views/porn_search/index.html.erb
@@ -3,6 +3,7 @@
   <%= form_with url: porn_search_search_url, method: :get, data: { turbo_frame: 'pornsearch_results', 'porn-search-target': 'search' } do |form| %>
     <%= form.text_field :tags, placeholder: 'E621 Tags' %>
     <%= form.hidden_field :link, value: params['link'] %>
+    <%= form.hidden_field :message_thread, value: params['message_thread'] %>
     <%= form.button type: :submit do %>
       <ion-icon role="presentation" name="search-outline"></ion-icon>
       Search E621
