Fixed empty state

--- a/app/views/porn_search/search.html.erb
+++ b/app/views/porn_search/search.html.erb
@@ -51,9 +51,11 @@
       <% if @link && (@link.theme.nil? || @link.theme.empty?) %>
         that search returned nothing. This search obeys the e621 global blacklist, and also has
         some light filtering to prevent easy abuse.
-      <% else %>
+      <% elsif @link %>
         that search may not have returned any results that match the theme tag (<%= @link.theme %>) that the link owner
         chose. Search with an empty tag list to see all theme-matching posts.
+      <% else %>
+        that search did not return any results.
       <% end %>
     </p>
   <% end %>
