--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -3,7 +3,7 @@
 <div data-controller="presence" data-presence-id-value="<%= @link.id %>"></div>
 
 <% if @is_current_user %>
-  <div class="task-tools" data-controller="link">
+  <div class="task-tools" data-controller="link" data-link-id-value="<%= @link.id %>">
     <dialog class="modal" data-link-target="modal">
       <h4>Confirm Delete</h4>
       <p>Are you sure you want to delete this link?</p>
@@ -16,14 +16,19 @@
       </div>
     </dialog>
     <div class="left">
-      <%= link_to "Back to links", links_path %>
+      <%= link_to "Back", links_path %>
     </div>
     <div class="right">
+      <a href="#" class="no-underline">
+        <ion-icon data-link-target="shareIcon" role="presentation" name="share-outline"></ion-icon>
+        <ion-icon data-link-target="checkmarkIcon" role="presentation" name="checkmark" style="display: none"></ion-icon>
+        <span data-link-target="copy">Copy URL</span>
+      </a>
       <a href="<%= edit_link_path(@link) %>" title="Edit this link" class="no-underline">
         <ion-icon role="presentation" name="build"></ion-icon>
         Edit
       </a>
-      <%= button_tag "Delete this link", data: { action: 'click->link#confirm' } %>
+      <%= button_tag "Delete", data: { action: 'click->link#confirm' } %>
     </div>
   </div>
 <% else %>
